--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="indexstyle/style.css">
     <link rel="stylesheet" href="../screens/mobile-screen.css">
     <link rel="stylesheet" href="../screens/small-screens.css">
     <title>Home.</title>
