--- a/contactus.html
+++ b/contactus.html
@@ -45,6 +45,8 @@
 
 <h1 class="contactus">Contact us.</h1>
 
+<form>
+
 <div class="contactcontainer">
     
         <div class="infobox">
@@ -54,7 +56,7 @@
             </div>    
             <div class="input-group">   
                 <label for="email">Your Email </label>
-                <input type="text" name="email" >
+                <input type="email" name="email" >
             </div>
             <div class="input-group">
                 <label for="Message">Your Message.</label>
@@ -63,12 +65,14 @@
         </div>
 </div>
 
-
 <!--Submit-Button-->
 
 <div class="bsubmit">
-    <input type="submit" value="Submit" class="submit-button">
+    <button class="submit-button">Sumbit</button>
 </div> 
+
+</form>
+
 
 </body>
 
