--- a/about.html
+++ b/about.html
@@ -29,15 +29,27 @@
 <!--Buttons-->   
  
     <div class="buttons">    
-        
         <a href="#" class="login">Log in</a>
         <button class="signin" >Sign up</button></a>      
-    
     </div>
-
+</div>
 </div>
 
+<!--Aboutus-text-->
+
+
+<div class="about-container">
+    <h1 class="aboutus-text">About us</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Error distinctio a explicabo! Provident quidem neque debitis cum unde maiores consequatur non. Molestias libero dolorem aspernatur accusantium ratione nemo necessitatibus eligendi exercitationem vel cupiditate, aperiam ex rerum, quidem facilis optio neque.
 </div>
+
+<div class="contactus-button">
+
+    <a class="contactus" href="contactus.html">Contact us</a>
+</div>
+
+
+
 
 </body>
 </html>
