--- a/contactus.html
+++ b/contactus.html
@@ -48,7 +48,6 @@
 <form>
 
 <div class="contactcontainer">
-    
         <div class="infobox">
             <div class="input-group">
                 <label for="fname">Your Name</label>
@@ -68,10 +67,11 @@
 <!--Submit-Button-->
 
 <div class="bsubmit">
-    <button class="submit-button">Sumbit</button>
+   <a class="thankyou" href="info.html">Submit</a>
 </div> 
 
 </form>
+
 
 
 </body>
